# mine

./: README.md  app.py  pyproject.toml  render.yaml  requirements.txt
project/: README.md  requirements.txt
project/static/: style.css
project/templates/: contact.html  eee.html  mainpage.html  thanks.html
templates/: aboutme.html  cse.html  ece.html  mainpage.html  mech.html  syllabus.html
