[tool.poetry]
name = "eduhub"
version = "0.1.0"
description = "EduHub Flask Platform"
authors = ["L.sriniketh reddy <ghanisriniketh@gmail.com>"]
packages = [{ include = "project" }]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.0.3"
fpdf = "^1.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
